# Taller_1_Estructura

./: Biblioteca.txt  CMakeLists.txt  Libro.cpp  Libro.h  MaterialBiblioagrafico.cpp  MaterialBiblioagrafico.h  README.md  Revista.cpp  Revista.h  Sistema.cpp  Sistema.h  Usuario.cpp  Usuario.h  Usuarios.txt  main.cpp
